Added DG for edit feature

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -153,6 +153,37 @@ Classes used by multiple components are in the `seedu.addressbook.commons` packa
 
 This section describes some noteworthy details on how certain features are implemented.
 
+=== [Itinerary] Edit trip/day/event feature
+==== Proposed Implementation
+Editing of trip/day/event can be accessed from `TripsPage/DaysPage/EventsPage` respectively. The
+The execution of commands in the each page is facilitated by `TripManagerParser/DayViewParser/EventViewParser` and respectively.
+They extends from `PageParser` class which serves as the abstraction for all parsers related to each __Page__.
+
+The operations are exposed to the `Model` interface through the `Model#getPageStatus()`
+method that returns the `PageStatus` containing the current state of application.
+
+Given below is an example usage scenario and how the program behaves at each step.
+Step 1. When the user launches the application. The `PageStatus` is initialized under along with other `Model` components. `PageStatus` at launch does not contain any `EditTripDescriptor/EditDayDescriptor/EditEventDescriptor` responsible for storing information for the edit.
+
+Step 2. The user currently on the `TripsPage/DaysPage/EventsPage` is displayed a list of `Trip/Day/Event` respectively. The user executes the edit command `EDIT1` using the `OneBasedIndex` on the list to edit it.This executes the `EnterEditTripFieldCommand/EnterEditDayFieldCommand/EnterEditEventFieldCommand` that initializes a new descriptor within `PageStatus` before switching over to the `EditTripPage/EditDayPage/EditEventPage` containing to perform the editing.
+
+Step 3. The user is now on the edit page displaying a list of fields that the user can edit in the `Trip/Day/Event`.
+The following is an example list of commands available in `DaysPage` and the execution of the program when a field is edited in `DaysPage`:
+
+* `edit n/<name> ds/<startDate> de/<endDate> b/<totalBudget> l/<destination> d/<description>` - Edits the relevant fields
+* `done` - Completes the edit and returns to the __Overall View__
+* `cancel` - Discards the edit and returns to the __Overall View__
+
+The user executes the command `edit n/EditedName` on the `DaysPage`. The command creates a new descriptor from the contents of the original, replacing the fields only if they are edited. The new descriptor is then assigned to `PageStatus` replacing the original `EditDayDescriptor`. The result of the edit is then displayed to the user.
+
+Step 4. The user has completed editing the `Trip/Day/Event` and executes `done`/`cancel` to confirm/discard the edit. The execution of the two cases are as follows:
+
+* The user executes `done` to confirm the edit. This executes the `DoneEditTripCommand/DoneEditDayCommand/DoneEditEventCommand` and a `Trip/Day/Event` is built from the descriptor respective to the type it describes. `DayList#set(target, edited)` proceeds to be executed which accesses the `Day` to edit from the `day` field in `PageStatus` as the target. The method replaces the original day with the newly built day from the descriptor. The descriptor in `PageStatus` is then reset to contain empty fields.
+
+* The User executes `cancel` to discard the edit. This executes the `CancelEditTripCommand/CancelEditDayCommand/CancelEditEventCommand` which resets the descriptor in `PageStatus` to contain all empty fields.
+
+Upon completion of the edit, the user is returned to the `TripPage/DaysPage/EventsPage` depending on where the user entered the edit page from.
+
 // tag::undoredo[]
 === [Proposed] Undo/Redo feature
 ==== Proposed Implementation
