Add UI for AddCommand BMI and BLOODSUGAR, able to read from and save to json file recordList.json. However, recordList.json will overwrite the entire json file on first add command on each new start. Use json file to verify that data is persisted till first command. Remember to specify that dateTime has to be the last field in userguide/developer docs because parse error.

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -70,7 +70,8 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 
 ==== Add a data entry to the diabetes tracker app: `add`
 
-Format: `add r/RECORD_TYPE v/VALUE t/TIME [t/TIME_END]`
+Format: `add rt/RECORD_TYPE v/VALUE t/TIME [t/TIME_END]`
+DateTime must be the last field.
 
 ==== Show a list of all data entries in the diabetes tracker app: `list`
 
