--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -235,19 +235,22 @@ Format: `track -d | -w | -m`
 
 Example: `track -d`
 
+=== Recommendations
+
 ==== Recommend
-Allow users to get a recommendation from the application, based on the budget
+Allow users to get a recommendation from the application, based on the current budget
 as well as the available food items entries. This also takes into account the
 user's likes and dislikes (see below).
 
 Format: `recommend`
 
-==== Likes and Dislikes
-Allows users to specify their liked categories, tags and/or locations. The
+==== Adding Likes and Dislikes
+Users can specify their liked and disliked categories, tags and/or locations. The
 recommendation system (as mentioned above) will then be able to generate more
-accurate recommendations with your preferences. Users can provide multiple
-categories, tags and/or locations with each command. To list the user's likes and
-dislikes, use the command without providing any arguments.
+accurate recommendations with your preferences.
+
+Users can provide multiple categories, tags and/or locations with each command.
+To list the user's likes and dislikes, use the command without providing any arguments.
 
 The user's likes and dislikes will be saved into the hard disk for their convenience.
 
@@ -266,6 +269,37 @@ Example: `like c/Chinese c/Western t/Healthy l/Univeristy Town`
 Format: `dislike c/Chinese c/Western t/Healthy l/Univeristy Town`
 
 Example: `dislike c/International t/Spicy l/The Deck l/The Terrace`
+
+[NOTE]
+====
+You cannot add what you have already liked into your current dislikes,
+and vice versa.
+====
+
+==== Removing Likes and Dislikes
+Users are able to remove their previously added likes and dislikes (if they exist)
+from the system. Using the command without providing any arguments clears the user's
+like or dislike list.
+
+*To remove likes*:
+
+Format: `removelike c/CATEGORY t/TAG l/LOCATION`
+
+Example: `removelike c/Japanese t/Spicy t/Healthy l/The Tea Party`
+
+*To remove dislikes*:
+
+Format: `removedislike c/CATEGORY t/TAG l/LOCATION`
+
+Example: `removedislike c/Chinese t/Cheap t/Healthy l/The Deck`
+
+*To remove all likes*:
+
+Format: `removelike`
+
+*To remove all dislikes*:
+
+Format: `removedislike`
 
 == Frequently Asked Questions
 
