--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -372,6 +372,13 @@ of each `DiaryEntry`, and supports common list operations.
 
 image::diary/DiaryModelClassDiagram.png[]
 
+'''
+
+As one of the desired specifications of our application was to allow the user commands, and edits made directly to the edit box
+to be non final until the `done` command is executed, a separate buffer model, `EditDiaryEntryDescriptor`, was needed to store the edit information.
+
+It stores the same `PhotoList` and `Index` as the initial `DiaryEntry` it is constructed from, but the diary text references a different String.
+
 [[diary-entry-ui]]
 ==== Aspect : User interface
 The diary entry UI abides by the `DiaryPage` implementation, and is thus contained within in one
@@ -406,11 +413,11 @@ The two facets of inputs dictate two separate ways the paragraphs can change.
 
 ====== 2. Changes as a result of user commands
 [[DiaryPageFillPage]]
-image::diary/DiaryFillPageCallback.png[title = "Sequence diagram of updating of DiaryPage UI post command execution"]
+image::diary/DiaryFillPageCallbackTrimmed.png[title = "Sequence diagram of updating of DiaryPage UI post command execution"]
 
 1. The `model` is updated, depending on whether the edit box is currently shown to the user. +
-1.1. The edited but uncommitted text stored in the current `EditDiaryEntryDescriptor` will be updated if the edit box is shown. (branch 2 of branch 2 in <<DiaryPageFillPage>>) +
-1.2. Otherwise, the current `DiaryEntry` in the `PageStatus` of the `model` is updated immediately. (branch 1 of branch 2 in the figu)
+1.1. The edited but uncommitted text stored in the current `EditDiaryEntryDescriptor` will be updated if the edit box is shown. (branch 2 <<DiaryPageFillPage>>) +
+1.2. Otherwise, the current `DiaryEntry` in the `PageStatus` of the `model` is updated immediately. (branch 1 in the <<DiaryPageFillPage>>)
 2. The text in the `DiaryEntryEditBox` is then updated with the updated `model` in the `fillPage` callback function executed by `MainWindow` as per
 the `Page` api, resulting in the changes reflecting in the observable paragraphs.
 
@@ -423,7 +430,7 @@ The parsing is done in the inner class `DiaryTextLineCell` based on the text lin
 customised regex pattern, creating new instances of `DiaryLines` based on the parsed input.
 
 NOTE: For `DiaryLines` with photos, the parsing process uses the photoList as set in the `DiaryPage's`
-`fillPage` method. (see branch 1 of branch 2 in <<DiaryPageFillPage>>)
+`fillPage` method. (see branch 1 in <<DiaryPageFillPage>>)
 
 ==== Design considerations
 Numerous design decisions and comprimised had to be made due to the desired specifications of text editing and displaying. +
